Added access cookie for UI utility
